--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="gallery">
             <img src="/assets/images/3.jpg" alt="Design 3">
             <img src="/assets/images/CAT_redesign.jpg" alt="Design 4">
-            <img src="/assets/images/December_General(1).jpg" alt="Design 5">
+            <img src="/assets/images/Juice_Can.jpg" alt="Design 5">
             <img src="/assets/images/Cloud_Service.jpg" alt="Design 6">
             <img src="/assets/images/January_2025_Wordings(1).jpg" alt="Design 7">
             <img src="/assets/images/7.jpg" alt="Design 8">
