--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
             <img src="/assets/images/3.jpg" alt="Design 3">
             <img src="/assets/images/CAT_redesign.jpg" alt="Design 4">
             <img src="/assets/images/Juice_Can.jpg" alt="Design 5">
-            <img src="/assets/images/Cloud_Service.jpg" alt="Design 6">
-            <img src="/assets/images/January_2025_Wordings(1).jpg" alt="Design 7">
-            <img src="/assets/images/7.jpg" alt="Design 8">
+            <img src="/assets/images/Task_1.jpg" alt="Design 6">
+            <img src="/assets/images/Pi7_GIF_CMP.gif" alt="Design 7">
+            <img src="/assets/images/Task2.jpg" alt="Design 8">
             <img src="./assets/images/6.jpg" alt="Design 1">
             <img src="/assets/images/Lohri_Animated.gif" alt="Design 2">
             <img src="/assets/images/Chess.jpg" alt="chess">
-            <img src="/assets/images/meme.jpeg" alt="meme">
+            <img src="/assets/images/BeachHouse_Plot.jpg" alt="meme">
             <img src="/assets/images/red.jpeg" alt="red">
             <img src="/assets/images/ai.jpeg" alt="ai">
         </div>
@@ -236,9 +236,9 @@ height="500">
         <div class="video-container">
             <h3>Video 4</h3>
             <video width="320" height="240" controls>
-                <source src="assets/Videos_Compressed/Negative Phrase 6.mp4" type="video/mp4">
+                <source src="assets/Videos_Compressed/Video-386.mp4" type="video/mp4">
             </video>
-            <p>This is a Negative phrase concept video</p>
+            <p>This is a 3d Static Animation video</p>
         </div>
 
         <div class="video-container">
