--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@ height="500">
         <div class="video-container">
             <h3>Video 1</h3>
             <video width="320" height="240" controls>
-                <source src="https://github.com/user-attachments/assets/b83cd479-bb69-4238-acd4-455d3ba63069" type="video/mp4">
+                <source src="https://github.com/user-attachments/assets/Videos_Compressed/static animation.mp4" type="video/mp4">
             </video>
-            <p>This is a 3D Animation of a cup</p>
+            <p>This is a After effects Camera Animation</p>
         </div>
 
         <div class="video-container">
@@ -236,7 +236,7 @@ height="500">
         <div class="video-container">
             <h3>Video 4</h3>
             <video width="320" height="240" controls>
-                <source src="assets/Videos_Compressed/Video-386.mp4" type="video/mp4">
+                <source src="assets/Videos_Compressed/static animation 2.mp4" type="video/mp4">
             </video>
             <p>This is a 3d Static Animation video</p>
         </div>
