--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@ height="500">
         <div class="video-container">
             <h3>Video 1</h3>
             <video width="320" height="240" controls>
-                <source src="https://github.com/user-attachments/assets/Videos_Compressed/static animation.mp4" type="video/mp4">
+                <source src="assets/Videos_Compressed/static animation.mp4" type="video/mp4">
             </video>
-            <p>This is a After effects Camera Animation</p>
+            <p>This is a AE Camera Animation</p>
         </div>
 
         <div class="video-container">
